2012-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Invoke diff(1) with ‘--label’ instead of ‘-L’.

	* rcsdiff.c (setup_label): Use "--label", not "-L".

2011-12-26  Oliver Billmann  <gnubug@billmann-edv.net>  (tiny change)

	Fix bug: Fully init ‘struct tm t’ used for ‘-zLT’ handling.

	On the i686 machine it was "initialized" with some large negative
	number which will than lead to tm_yday being initialized in tm2time.
	But on the x86_64 machine it contained the valid value 0 which than
	always leads to YYYY-01-01.

	ttn sez: Regression introduced 2011-01-13,
	"Fix bug: Don't clobber ‘yday’ unconditionally".
	To avoid this class of bug in the future, when converting
	an assignment from unconditional to conditional, be sure
	to initialize "upstream" of the conversion location,
	in effect, moving the unconditional assignment earlier.

	* rcstime.c (date2str): Init also ‘t.tm_yday’.

2011-12-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rlog: Fix bug: Remove debugging instrumentation.

	Code introduced 2010-06-01, "Add abstractions:
	{NUM,DATE}_{LT,EQ,GT}, NUMF_{LT,EQ}".
	This is a bug fix and not merely "decruft" because
	in the meantime, RCS 5.8 was released.  :-(

	* rlog.c (extdate): Remove calls to ‘complain’.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--disable-standalone-compat’.

	* Makefile.am (bin_SCRIPTS): Move inside ‘if BINBLOAT’.
	[!BINBLOAT] (noinst_DATA): New var.
	(CLEANFILES): Add sub.sh.
	(sub.sh): New target.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	grcs: Fix bug: Handle argv[0] w/o directory component.

	Omission from 2011-10-30, "New program: grcs".

	* super.c (recognize): Return a ‘submain_t *’.
	(main): Update call to ‘recognize’; for ‘argv[1]’, if there is
	a dir sep, use ‘argv[0]’ directly, otherwise ‘PEER_SUPER ()’.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Decruft: Don't distribute TAGS.

	* Makefile.am (EXTRA_DIST): Remove TAGS, $(TESTS).
