@@ -31,7 +31,7 @@ TESTS_ENVIRONMENT = 				\
   DEFSHELLFUNCS=$(DEFSHELLFUNCS)		\
   PATHPREFIX="$(PATHPREFIX)" sh
 
-XFAIL_TESTS = t810
+XFAIL_TESTS =
 
 TESTS = \
  t010 \
